# ai-motoria

./: .gitignore  README.md  pyproject.toml
movenet/: README.md  cache.py  constants.py  debug.py  dialog.py  image.py  main.py  model.py  prediction.py  pyproject.toml  q_spinner.py  spinner.py  timing.py  ui.py  video.py
openpose/: README.md  image.py  main.py  pyproject.toml
openpose/models/: .gitignore
