[project]
name = "ai-motoia"
version = "0.1.0"
description = "implementation of movenet and openpose"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "opencv-python==4.12.0.88",
  "numpy==2.2.6",
  "pillow==11.3.0",
  "qtawesome>=1.4.0",
  "pyside6==6.9.2",
  "kagglehub==0.3.13",
]

[project.optional-dependencies]
cpu = [
    "tensorflow-cpu>=2.20.0",
]

[tool.uv.workspace]
members = ["movenet", "openpose"]

[tool.ruff.lint]
ignore = ["F401"]

[tool.basedpyright]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportAny = false
reportExplicitAny = false
reportArgumentType = false
reportMissingTypeStubs= false
