[project]
name = "movenet"
version = "0.1.0"
description = "local implementation of movenet"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "opencv-python",
  "matplotlib",
  "kagglehub",
]

[tool.ruff.lint]
ignore = ["F401"]

[tool.basedpyright]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportAny = false
reportExplicitAny = false
reportArgumentType = false
reportMissingTypeStubs= false
